--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
                                   REQUIREMENTS
 
-You will need the DBus, Glade, GObject and GTK Python modules.
+You will need the DBus, Glade, GObject, GTK and XDG Python modules.
 On Debian-based systems these are available in the following packages:
 
 * python-dbus
