--- a/INSTALL
+++ b/INSTALL
@@ -11,10 +11,9 @@ On Debian-based systems these are available in the following packages:
 
                                BUILD REQUIREMENTS
 
-You will need the gettext and intltool tools.
+You will need the gettext tools.
 On Debian-based systems these are available in the following packages:
 
 * gettext
-* intltool
 
 # vi:textwidth=80:expandtab
