--- a/po/de.po
+++ b/po/de.po
@@ -8,51 +8,95 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-04 15:05+0200\n"
-"PO-Revision-Date: 2008-07-30 12:05+0200\n"
-"Last-Translator: Michael Kuhn <suraia@ikkoku.de>\n"
+"POT-Creation-Date: 2008-09-04 22:12+0200\n"
+"PO-Revision-Date: 2008-09-04 19:47+0000\n"
+"Last-Translator: Michael Kuhn <Unknown>\n"
 "Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Launchpad-Export-Date: 2008-09-04 19:56+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
-#: ../signals.py:835
+#: ../signals.py:658
+#, python-format
+msgid "• You are now known as %(newnick)s."
+msgstr "• Sie sind jetzt bekannt als %(newnick)s."
+
+#: ../signals.py:660
+#, python-format
+msgid "• %(nick)s is now known as %(newnick)s."
+msgstr "• %(nick)s ist jetzt bekannt als %(newnick)s."
+
+#: ../signals.py:727
+#, python-format
+msgid "« You have quit (%(reason)s)."
+msgstr "« Sie haben die Verbindung beendet (%(reason)s)."
+
+#: ../signals.py:729
+msgid "« You have quit."
+msgstr "« Sie haben die Verbindung beendet."
+
+#: ../signals.py:739
+#, python-format
+msgid "« %(nick)s has quit (%(reason)s)."
+msgstr "« %(nick)s hat die Verbindung beendet (%(reason)s)."
+
+#: ../signals.py:741
+#, python-format
+msgid "« %(nick)s has quit."
+msgstr "« %(nick)s hat die Verbindung beendet."
+
+#: ../signals.py:799
+#, python-format
+msgid "» You have joined %(channel)s."
+msgstr "» Sie haben %(channel)s betreten."
+
+#: ../signals.py:809
+#, python-format
+msgid "» <font foreground='%(color)s'>%(nick)s</font> has joined %(channel)s."
+msgstr ""
+"» <font foreground='%(color)s'>%(nick)s</font> hat %(channel)s betreten."
+
+#: ../signals.py:830
 #, python-format
 msgid "« You have left %(channel)s (%(reason)s)."
-msgstr ""
+msgstr "« Sie haben %(channel)s verlassen (%(reason)s)."
 
-#: ../signals.py:837
+#: ../signals.py:832
 #, python-format
 msgid "« You have left %(channel)s."
-msgstr ""
+msgstr "« Sie haben %(channel)s verlassen."
 
-#: ../signals.py:847
+#: ../signals.py:842
 #, python-format
 msgid ""
 "« <font foreground='%(color)s'>%(nick)s</font> has left %(channel)s (%(reason)"
 "s)."
 msgstr ""
+"« <font foreground='%(color)s'>%(nick)s</font> hat %(channel)s  verlassen (%"
+"(reason)s)."
 
-#: ../signals.py:849
+#: ../signals.py:844
 #, python-format
 msgid "« <font foreground='%(color)s'>%(nick)s</font> has left %(channel)s."
 msgstr ""
+"« <font foreground='%(color)s'>%(nick)s</font> hat %(channel)s verlassen."
 
-#: ../signals.py:869
+#: ../signals.py:864
 #, python-format
-msgid "%s: No such nick/channel."
-msgstr ""
+msgid "• %(target)s: No such nick/channel."
+msgstr "• %(target)s: Kein solcher Nick/Channel."
 
-#: ../signals.py:881
+#: ../signals.py:876
 #, python-format
 msgid "[%(nick)s] %(message)s"
-msgstr ""
+msgstr "[%(nick)s] %(message)s"
 
-#: ../signals.py:883
+#: ../signals.py:878
 #, python-format
 msgid "[%(nick)s] End of whois."
-msgstr ""
+msgstr "[%(nick)s] Ende der whois-Abfrage."
 
 #: ../glade/dialogs.glade.h:1
 msgid "<b>Add Server</b>"
@@ -86,7 +130,7 @@ msgstr "Automatisch verbinden:"
 
 #: ../glade/dialogs.glade.h:9
 msgid "Delete Server"
-msgstr ""
+msgstr "Server löschen"
 
 #: ../glade/dialogs.glade.h:10
 msgid "Edit Server"
@@ -94,7 +138,7 @@ msgstr "<b>Server bearbeiten</b>"
 
 #: ../glade/dialogs.glade.h:11
 msgid "List"
-msgstr ""
+msgstr "Liste"
 
 #: ../glade/dialogs.glade.h:12
 msgid "Nick name:"
@@ -106,7 +150,7 @@ msgstr "NickServ-Passwort:"
 
 #: ../glade/dialogs.glade.h:14
 msgid "Port:"
-msgstr ""
+msgstr "Port:"
 
 #: ../glade/dialogs.glade.h:15
 msgid "Real name:"
@@ -127,19 +171,19 @@ msgstr "Automatisch verbinden:"
 
 #: ../glade/mainwindow.glade.h:2
 msgid "Autojoin"
-msgstr ""
+msgstr "Automatisch betreten"
 
 #: ../glade/mainwindow.glade.h:3
 msgid "Ban"
-msgstr ""
+msgstr "Bannen"
 
 #: ../glade/mainwindow.glade.h:4
 msgid "Close"
-msgstr ""
+msgstr "Schließen"
 
 #: ../glade/mainwindow.glade.h:5
 msgid "Closes the tab"
-msgstr ""
+msgstr "Schließt den Reiter"
 
 #: ../glade/mainwindow.glade.h:6
 msgid "Connect"
@@ -172,11 +216,11 @@ msgstr ""
 
 #: ../glade/mainwindow.glade.h:13
 msgid "Ignore"
-msgstr ""
+msgstr "Ignorieren"
 
 #: ../glade/mainwindow.glade.h:14
 msgid "Join"
-msgstr ""
+msgstr "Betreten"
 
 #: ../glade/mainwindow.glade.h:15
 msgid "Join the channel"
@@ -188,7 +232,7 @@ msgstr ""
 
 #: ../glade/mainwindow.glade.h:17
 msgid "Kick"
-msgstr ""
+msgstr "Kicken"
 
 #: ../glade/mainwindow.glade.h:18
 msgid "Leave the channel"
@@ -200,7 +244,7 @@ msgstr ""
 
 #: ../glade/mainwindow.glade.h:20
 msgid "Part"
-msgstr ""
+msgstr "Verlassen"
 
 #: ../glade/mainwindow.glade.h:22
 msgid "Set -v to the user"
@@ -269,8 +313,8 @@ msgstr "_Ansicht"
 
 #: ../glade/mainwindow.glade.h:38
 msgid "_maki"
-msgstr ""
+msgstr "_maki"
 
 #: ../glade/mainwindow.glade.h:39
 msgid "_tekka"
-msgstr ""
+msgstr "_tekka"
