--- a/po/nb.po
+++ b/po/nb.po
@@ -7,20 +7,20 @@ msgstr ""
 "Project-Id-Version: tekka 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-25 14:11+0100\n"
-"PO-Revision-Date: 2008-12-08 19:59+0000\n"
+"PO-Revision-Date: 2009-02-24 22:30+0000\n"
 "Last-Translator: Bjørn Olav Samdal <bjornsam@ulrik.uio.no>\n"
 "Language-Team: Norwegian Bokmal <nb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2008-12-25 19:16+0000\n"
+"X-Launchpad-Export-Date: 2009-03-07 00:24+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../commands.py:50
 #, python-format
 msgid "Warning: You are not connected to server %(server)s."
-msgstr ""
+msgstr "Advarsel: Du er ikke tilkoblet en tjener %(server)s."
 
 #: ../commands.py:106
 #, python-format
@@ -171,7 +171,7 @@ msgstr "Kanalen er full."
 
 #: ../signals.py:1165
 msgid "The channel is invite-only."
-msgstr ""
+msgstr "Kanalen har invite-only"
 
 #: ../signals.py:1167
 msgid "You are banned."
@@ -214,16 +214,16 @@ msgstr "K_ompiler og kjør"
 
 #: ../helper/keyDialog.py:10
 msgid "Channel Key"
-msgstr ""
+msgstr "Kanalnøkkel"
 
 #: ../helper/keyDialog.py:30
 #, python-format
 msgid "Enter the key for the channel %(channel)s."
-msgstr ""
+msgstr "Tast en nøkkel for kanalen %(channel)s."
 
 #: ../helper/keyDialog.py:41
 msgid "Save key for channel"
-msgstr ""
+msgstr "Lagre nøkkel for kanalen"
 
 #: ../glade/mainwindow.glade.h:1
 msgid "Auto-connect"
@@ -284,6 +284,7 @@ msgstr "Rettigheter"
 #: ../glade/mainwindow.glade.h:15
 msgid "Opens a dialog which asks you for the channel key to set."
 msgstr ""
+"Åpne oppsett for kanalen som spør deg etter nøkkel som skal legges til."
 
 #: ../glade/mainwindow.glade.h:16
 msgid "Part"
@@ -295,7 +296,7 @@ msgstr "Tjenerliste"
 
 #: ../glade/mainwindow.glade.h:18
 msgid "Set Key"
-msgstr ""
+msgstr "Skriv inn nøkkel"
 
 #: ../glade/mainwindow.glade.h:19
 msgid "Shutdown"
@@ -365,14 +366,11 @@ msgstr "_tekka"
 msgid "translator-credits"
 msgstr ""
 "Launchpad Contributions:\n"
-"  Bjørn Olav Samdal https://launchpad.net/~bjornsam\n"
-"\n"
-"Launchpad Contributions:\n"
 "  Bjørn Olav Samdal https://launchpad.net/~bjornsam"
 
 #: ../glade/dialogs/advancedPreferences.glade.h:1
 msgid "Advanced Preferences"
-msgstr ""
+msgstr "Avanserte innstillinger"
 
 #: ../glade/dialogs/channelList.glade.h:1
 msgid "Channel List"
@@ -394,43 +392,43 @@ msgstr "_Fjern innlastet"
 msgid ""
 "<b>Warning:</b>\n"
 "Changes will be applied after closing this dialog."
-msgstr ""
+msgstr "<b>Advarsel:</b>"
 
 #: ../glade/dialogs/preferences.glade.h:3
 msgid "A_uto expand server tree"
-msgstr ""
+msgstr "A_utomatisk forgren serveroppsett"
 
 #: ../glade/dialogs/preferences.glade.h:4
 msgid "Actions:"
-msgstr ""
+msgstr "Handlinger:"
 
 #: ../glade/dialogs/preferences.glade.h:5
 msgid "Ad_vanced Settings"
-msgstr ""
+msgstr "A_vansert Oppsett"
 
 #: ../glade/dialogs/preferences.glade.h:6
 msgid "C_hatting"
-msgstr ""
+msgstr "P_ersonlige meldinger"
 
 #: ../glade/dialogs/preferences.glade.h:7
 msgid "C_olors"
-msgstr ""
+msgstr "F_arger"
 
 #: ../glade/dialogs/preferences.glade.h:8
 msgid "Default nick:"
-msgstr ""
+msgstr "Standard kallenavn:"
 
 #: ../glade/dialogs/preferences.glade.h:9
 msgid "General Output font:"
-msgstr ""
+msgstr "Standard skrifttype:"
 
 #: ../glade/dialogs/preferences.glade.h:10
 msgid "Highlighted actions:"
-msgstr ""
+msgstr "Markerte handling:"
 
 #: ../glade/dialogs/preferences.glade.h:11
 msgid "Highlighted messages:"
-msgstr ""
+msgstr "Markerte handlinger:"
 
 #: ../glade/dialogs/preferences.glade.h:12
 msgid ""
@@ -441,18 +439,24 @@ msgid ""
 "For some options it is neccessary to restart tekka for the changes to take "
 "effect."
 msgstr ""
+"Hvis du ønsker å ha kontroll på <u>alle</u> alternativer på oppsettet kan du "
+"bruke avansert oppsett.\n"
+"\n"
+"<b>Melding</b>\n"
+"For noen av valgene er det nødvendig å starte tekka på nytt for å oppdatere "
+"oppsettet."
 
 #: ../glade/dialogs/preferences.glade.h:16
 msgid "Last log lines:"
-msgstr ""
+msgstr "Siste linjer i loggen:"
 
 #: ../glade/dialogs/preferences.glade.h:17
 msgid "Messages:"
-msgstr ""
+msgstr "Meldinger:"
 
 #: ../glade/dialogs/preferences.glade.h:18
 msgid "Notification:"
-msgstr ""
+msgstr "Melding:"
 
 #: ../glade/dialogs/preferences.glade.h:19
 msgid "Output font:"
@@ -460,43 +464,43 @@ msgstr ""
 
 #: ../glade/dialogs/preferences.glade.h:20
 msgid "Own nick:"
-msgstr ""
+msgstr "Eget kallenavn:"
 
 #: ../glade/dialogs/preferences.glade.h:21
 msgid "Own text:"
-msgstr ""
+msgstr "Egen tekst:"
 
 #: ../glade/dialogs/preferences.glade.h:22
 msgid "Part message:"
-msgstr ""
+msgstr "Del av beskjed:"
 
 #: ../glade/dialogs/preferences.glade.h:23
 msgid "Quit message:"
-msgstr ""
+msgstr "Avsluttningsmelding:"
 
 #: ../glade/dialogs/preferences.glade.h:24
 msgid "Shutdown _maki on close"
-msgstr ""
+msgstr "Slå av _maki ved avslutting"
 
 #: ../glade/dialogs/preferences.glade.h:25
 msgid "Use _RGBA"
-msgstr ""
+msgstr "Bruk _RGBA"
 
 #: ../glade/dialogs/preferences.glade.h:26
 msgid "_Advanced"
-msgstr ""
+msgstr "_Avansert"
 
 #: ../glade/dialogs/preferences.glade.h:27
 msgid "_Hide on close"
-msgstr ""
+msgstr "_Skjul ved avslutting"
 
 #: ../glade/dialogs/preferences.glade.h:28
 msgid "_Nick Colors"
-msgstr ""
+msgstr "_Navnfarge"
 
 #: ../glade/dialogs/preferences.glade.h:29
 msgid "_Show status icon"
-msgstr ""
+msgstr "_Vis statusikon"
 
 #: ../glade/dialogs/serverAdd.glade.h:1
 msgid "<b>Add Server</b>"
@@ -504,7 +508,7 @@ msgstr "<b>Servertilkobling</b>"
 
 #: ../glade/dialogs/serverAdd.glade.h:2 ../glade/dialogs/serverEdit.glade.h:1
 msgid "<b>Command List</b>"
-msgstr ""
+msgstr "<b>Kommando Liste</b>"
 
 #: ../glade/dialogs/serverAdd.glade.h:3
 msgid "Add Server"
