Update translation template.

--- a/po/tekka.pot
+++ b/po/tekka.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-23 00:26+0100\n"
+"POT-Creation-Date: 2010-01-23 01:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -193,7 +193,7 @@ msgstr ""
 msgid ""
 "maki auto accepted the following file transfer:\n"
 "Filename: %(filename)s\n"
-"Sender: %(filename)s\n"
+"Sender: %(sender)s\n"
 "Size: %(size)s\n"
 "Server: %(server)s"
 msgstr ""
