--- a/po/cs.po
+++ b/po/cs.po
@@ -4,33 +4,33 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: tekka 1.1\n"
+"Project-Id-Version: tekka 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-23 00:26+0100\n"
-"PO-Revision-Date: 2010-01-05 15:05+0000\n"
+"POT-Creation-Date: 2010-01-30 23:37+0100\n"
+"PO-Revision-Date: 2010-01-24 13:15+0000\n"
 "Last-Translator: Kuvaly [LCT] <kuvaly@seznam.cz>\n"
 "Language-Team: Czech\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-01-23 00:00+0000\n"
+"X-Launchpad-Export-Date: 2010-02-14 21:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../signal_handler.py:325
 #, python-format
 msgid "• Topic for %(channel)s: %(topic)s"
-msgstr ""
+msgstr "• Téma pro %(channel)s: %(topic)s"
 
 #: ../signal_handler.py:361
 #, python-format
 msgid "• You changed the topic to %(topic)s."
-msgstr ""
+msgstr "• Změnili jste téma na %(topic)s."
 
 #: ../signal_handler.py:363
 #, python-format
 msgid "• %(nick)s changed the topic to %(topic)s."
-msgstr ""
+msgstr "• %(nick)s změnil téma na %(topic)s."
 
 #: ../signal_handler.py:442
 #, python-format
@@ -95,12 +95,12 @@ msgstr ""
 #: ../signal_handler.py:1151
 #, python-format
 msgid "» You have joined %(channel)s."
-msgstr ""
+msgstr "» Stali jste se členy %(channel)s."
 
 #: ../signal_handler.py:1162
 #, python-format
 msgid "» %(nick)s has joined %(channel)s."
-msgstr ""
+msgstr "» %(nick)s se stal členem %(channel)s."
 
 #: ../signal_handler.py:1260
 #, python-format
@@ -143,19 +143,19 @@ msgstr ""
 
 #: ../signal_handler.py:1344
 msgid "Unknown reason"
-msgstr ""
+msgstr "Neznámý důvod"
 
 #: ../signal_handler.py:1347
 msgid "The channel is full."
-msgstr ""
+msgstr "Kanál je plný."
 
 #: ../signal_handler.py:1349
 msgid "The channel is invite-only."
-msgstr ""
+msgstr "Kanál je pouze pro zvané."
 
 #: ../signal_handler.py:1351
 msgid "You are banned."
-msgstr ""
+msgstr "Jste banováni."
 
 #: ../signal_handler.py:1367
 msgid "You need the correct channel key."
@@ -166,37 +166,34 @@ msgstr ""
 msgid "You can not join %(channel)s: %(reason)s"
 msgstr ""
 
-#: ../signal_handler.py:1408 ../tekka/dialogs/channelList.py:210
-msgid "User"
-msgstr "Uživatel"
-
-#: ../signal_handler.py:1409 ../tekka/dialogs/channelList.py:210
-msgid "Topic"
-msgstr "Téma"
-
-#: ../signal_handler.py:1430
+#: ../signal_handler.py:1385
 #, python-format
 msgid "[%(nick)s] %(message)s"
 msgstr ""
 
-#: ../signal_handler.py:1435
+#: ../signal_handler.py:1390
 #, python-format
 msgid "[%(nick)s] End of whois."
 msgstr ""
 
-#: ../signal_handler.py:1505
+#: ../signal_handler.py:1460
 msgid "Auto accepted file transfer"
 msgstr ""
 
-#: ../signal_handler.py:1506
+#: ../signal_handler.py:1461
 #, python-format
 msgid ""
 "maki auto accepted the following file transfer:\n"
 "Filename: %(filename)s\n"
-"Sender: %(filename)s\n"
+"Sender: %(sender)s\n"
 "Size: %(size)s\n"
 "Server: %(server)s"
 msgstr ""
+"maki auto akceptoval následující transfer:\n"
+"Název souboru: %(filename)s\n"
+"Odesílatel: %(sender)s\n"
+"Velikost: %(size)s\n"
+"Server: %(server)s"
 
 #: ../tekka/com.py:108 ../tekka/com.py:114 ../tekka/com.py:206
 #: ../tekka/gui/mgmt.py:248
@@ -235,30 +232,38 @@ msgstr ""
 msgid "Please update maki to at least version %(version)s."
 msgstr ""
 
-#: ../tekka/commands.py:52 ../tekka/commands.py:60
+#: ../tekka/commands.py:53 ../tekka/commands.py:62
 msgid "Warning:"
 msgstr "Varování:"
 
-#: ../tekka/commands.py:53
+#: ../tekka/commands.py:54
 #, python-format
 msgid "You are not connected to server %(server)s."
 msgstr "Nejste připojeni k serveru %(server)s."
 
-#: ../tekka/commands.py:61
+#: ../tekka/commands.py:63
 #, python-format
 msgid ""
 "The channel %(channel)s is not joined. Everything you write will not be send."
 msgstr ""
 
-#: ../tekka/commands.py:314
+#: ../tekka/commands.py:330
 msgid "• Begin of names"
 msgstr ""
 
-#: ../tekka/commands.py:319
+#: ../tekka/commands.py:335
 msgid "• End of names"
 msgstr ""
 
-#: ../tekka/commands.py:622
+#: ../tekka/commands.py:462 ../tekka/dialogs/channelList.py:210
+msgid "User"
+msgstr "Uživatel"
+
+#: ../tekka/commands.py:463 ../tekka/dialogs/channelList.py:210
+msgid "Topic"
+msgstr "Téma"
+
+#: ../tekka/commands.py:691
 #, python-format
 msgid "• Unknown command “%(command)s”, sending raw command “%(raw)s”."
 msgstr ""
@@ -518,47 +523,47 @@ msgid ""
 "ask for support."
 msgstr ""
 
-#: ../tekka/main.py:462
+#: ../tekka/main.py:468
 msgid "Reset markup"
 msgstr ""
 
-#: ../tekka/main.py:612
+#: ../tekka/main.py:618
 #, python-format
 msgid "Do you really want to close channel “%(name)s”?"
 msgstr ""
 
-#: ../tekka/main.py:614
+#: ../tekka/main.py:620
 #, python-format
 msgid "Do you really want to close query “%(name)s”?"
 msgstr ""
 
-#: ../tekka/main.py:616
+#: ../tekka/main.py:622
 #, python-format
 msgid "Do you really want to close server “%(name)s”?"
 msgstr ""
 
 #. TODO: away status
-#: ../tekka/main.py:712
+#: ../tekka/main.py:718
 msgid "Nickname: "
 msgstr "Přezdívka: "
 
-#: ../tekka/main.py:715
+#: ../tekka/main.py:721
 msgid "User: "
 msgstr "Uživatel: "
 
-#: ../tekka/main.py:716
+#: ../tekka/main.py:722
 msgid "Topic: "
 msgstr "Téma: "
 
-#: ../tekka/main.py:718 ../tekka/main.py:722
+#: ../tekka/main.py:724 ../tekka/main.py:728
 msgid "Last sentence: "
 msgstr ""
 
-#: ../tekka/main.py:1177
+#: ../tekka/main.py:1188
 msgid "Error occured"
 msgstr "Vyskytla se chyba"
 
-#: ../tekka/main.py:1186
+#: ../tekka/main.py:1197
 msgid ""
 "<span size='larger' weight='bold'>Error</span>\n"
 "\n"
@@ -626,22 +631,8 @@ msgstr ""
 msgid "Advanced Preferences"
 msgstr ""
 
-#: ../glade/dialogs/advancedPreferences.glade.h:2
-#: ../glade/dialogs/channelList.glade.h:2 ../glade/dialogs/hide.glade.h:11
-#: ../glade/dialogs/history.glade.h:3 ../glade/dialogs/plugins.glade.h:5
-msgid "gtk-close"
-msgstr ""
-
 #: ../glade/dialogs/channelList.glade.h:1
 msgid "Channel List"
-msgstr ""
-
-#: ../glade/dialogs/channelList.glade.h:3
-msgid "gtk-find"
-msgstr ""
-
-#: ../glade/dialogs/channelList.glade.h:4
-msgid "gtk-stop"
 msgstr ""
 
 #: ../glade/dialogs/dcc.glade.h:1
@@ -903,14 +894,6 @@ msgstr ""
 msgid "Server name:"
 msgstr ""
 
-#: ../glade/dialogs/serverAdd.glade.h:11
-msgid "gtk-add"
-msgstr ""
-
-#: ../glade/dialogs/serverAdd.glade.h:12
-msgid "gtk-cancel"
-msgstr ""
-
 #: ../glade/dialogs/serverDelete.glade.h:2
 #, no-c-format
 msgid ""
@@ -921,14 +904,6 @@ msgstr ""
 
 #: ../glade/dialogs/serverDelete.glade.h:5
 msgid "Delete Server"
-msgstr ""
-
-#: ../glade/dialogs/serverDelete.glade.h:6
-msgid "gtk-no"
-msgstr ""
-
-#: ../glade/dialogs/serverDelete.glade.h:7
-msgid "gtk-yes"
 msgstr ""
 
 #: ../glade/dialogs/serverEdit.glade.h:2
@@ -997,12 +972,12 @@ msgstr ""
 
 #: ../glade/mainwindow.glade.h:16
 msgid "_Topic Bar"
-msgstr ""
+msgstr "_Nabídka témat"
 
 #: ../glade/mainwindow.glade.h:17
 msgid "_View"
-msgstr ""
+msgstr "_Pohled"
 
 #: ../glade/mainwindow.glade.h:18
 msgid "_maki"
-msgstr ""
+msgstr "_maki"
