--- a/po/de.po
+++ b/po/de.po
@@ -4,17 +4,17 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: tekka 1.1\n"
+"Project-Id-Version: tekka 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-23 00:26+0100\n"
-"PO-Revision-Date: 2009-12-28 22:37+0000\n"
-"Last-Translator: SHyx0rmZ <Unknown>\n"
+"POT-Creation-Date: 2010-01-30 23:37+0100\n"
+"PO-Revision-Date: 2010-01-23 12:56+0000\n"
+"Last-Translator: Michael Kuhn <Unknown>\n"
 "Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-01-23 00:00+0000\n"
+"X-Launchpad-Export-Date: 2010-02-14 21:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../signal_handler.py:325
@@ -40,18 +40,18 @@ msgstr "• %(nick)s ist abwesend (%(message)s)."
 #: ../signal_handler.py:566
 #, python-format
 msgid "• Modes for %(target)s: %(mode)s"
-msgstr ""
+msgstr "• Modi für %(target)s: %(mode)s"
 
 #. normal ctcp
 #: ../signal_handler.py:659
 #, python-format
 msgid "CTCP from %(nick)s to Channel:"
-msgstr ""
+msgstr "CTCP von %(nick)s für Channel:"
 
 #: ../signal_handler.py:690
 #, python-format
 msgid "CTCP request from you to %(target)s: %(message)s"
-msgstr ""
+msgstr "CTCP-Anfrage von Ihnen für %(target)s: %(message)s"
 
 #: ../signal_handler.py:892
 #, python-format
@@ -124,7 +124,7 @@ msgstr "« %(nick)s hat %(channel)s verlassen."
 
 #: ../signal_handler.py:1316
 msgid "• You are not a channel operator."
-msgstr ""
+msgstr "• Sie sind kein Channel-Operator."
 
 #: ../signal_handler.py:1326
 #, python-format
@@ -166,37 +166,34 @@ msgstr "Sie benötigen den richtigen Channel-Schlüssel."
 msgid "You can not join %(channel)s: %(reason)s"
 msgstr "Sie können %(channel)s nicht betreten: %(reason)s"
 
-#: ../signal_handler.py:1408 ../tekka/dialogs/channelList.py:210
-msgid "User"
-msgstr "Benutzer"
-
-#: ../signal_handler.py:1409 ../tekka/dialogs/channelList.py:210
-msgid "Topic"
-msgstr "Thema"
-
-#: ../signal_handler.py:1430
+#: ../signal_handler.py:1385
 #, python-format
 msgid "[%(nick)s] %(message)s"
 msgstr "[%(nick)s] %(message)s"
 
-#: ../signal_handler.py:1435
+#: ../signal_handler.py:1390
 #, python-format
 msgid "[%(nick)s] End of whois."
 msgstr "[%(nick)s] Ende der whois-Abfrage."
 
-#: ../signal_handler.py:1505
+#: ../signal_handler.py:1460
 msgid "Auto accepted file transfer"
-msgstr ""
+msgstr "Dateitransfer automatisch akzeptiert"
 
-#: ../signal_handler.py:1506
+#: ../signal_handler.py:1461
 #, python-format
 msgid ""
 "maki auto accepted the following file transfer:\n"
 "Filename: %(filename)s\n"
-"Sender: %(filename)s\n"
+"Sender: %(sender)s\n"
 "Size: %(size)s\n"
 "Server: %(server)s"
 msgstr ""
+"maki hat den folgenden Dateitransfer automatisch akzeptiert:\n"
+"Dateiname: %(filename)s\n"
+"Sender: %(sender)s\n"
+"Größe: %(size)s\n"
+"Server: %(server)s"
 
 #: ../tekka/com.py:108 ../tekka/com.py:114 ../tekka/com.py:206
 #: ../tekka/gui/mgmt.py:248
@@ -218,7 +215,7 @@ msgstr ""
 
 #: ../tekka/com.py:150
 msgid "Communication error with maki."
-msgstr ""
+msgstr "Es trat ein Fehler bei der Kommunikation mit maki auf."
 
 #: ../tekka/com.py:151
 #, python-format
@@ -227,6 +224,9 @@ msgid ""
 "<b>%s</b>\n"
 "You should keep safe that maki is running "
 msgstr ""
+"Es trat ein Fehler beim Ausführen von <b>'%s</b>' mit DBus auf: \n"
+"<b>%s</b>\n"
+"Sie sollten sicherstellen, dass maki läuft. "
 
 #: ../tekka/com.py:252
 msgid "tekka requires a newer maki version."
@@ -237,16 +237,16 @@ msgstr "tekka benötigt eine neuere Version von maki."
 msgid "Please update maki to at least version %(version)s."
 msgstr "Bitte aktualisieren Sie maki mindestens auf Version %(version)s."
 
-#: ../tekka/commands.py:52 ../tekka/commands.py:60
+#: ../tekka/commands.py:53 ../tekka/commands.py:62
 msgid "Warning:"
 msgstr "Warnung:"
 
-#: ../tekka/commands.py:53
+#: ../tekka/commands.py:54
 #, python-format
 msgid "You are not connected to server %(server)s."
 msgstr "Sie sind nicht mit Server %(server)s verbunden."
 
-#: ../tekka/commands.py:61
+#: ../tekka/commands.py:63
 #, python-format
 msgid ""
 "The channel %(channel)s is not joined. Everything you write will not be send."
@@ -254,15 +254,23 @@ msgstr ""
 "Dem Kanal %(channel)s wurde nicht beigetreten. Nichts was Sie schreiben, "
 "wird gesendet."
 
-#: ../tekka/commands.py:314
+#: ../tekka/commands.py:330
 msgid "• Begin of names"
-msgstr ""
+msgstr "• Anfang von „names“"
 
-#: ../tekka/commands.py:319
+#: ../tekka/commands.py:335
 msgid "• End of names"
-msgstr ""
+msgstr "• Ende von „names“"
 
-#: ../tekka/commands.py:622
+#: ../tekka/commands.py:462 ../tekka/dialogs/channelList.py:210
+msgid "User"
+msgstr "Benutzer"
+
+#: ../tekka/commands.py:463 ../tekka/dialogs/channelList.py:210
+msgid "Topic"
+msgstr "Thema"
+
+#: ../tekka/commands.py:691
 #, python-format
 msgid "• Unknown command “%(command)s”, sending raw command “%(raw)s”."
 msgstr ""
@@ -270,15 +278,15 @@ msgstr ""
 
 #: ../tekka/dialogs/addServer.py:76
 msgid "No server name given."
-msgstr ""
+msgstr "Es wurde kein Servername angegeben."
 
 #: ../tekka/dialogs/addServer.py:77
 msgid "You must enter a server name."
-msgstr ""
+msgstr "Sie müssen einen Servernamen angeben."
 
 #: ../tekka/dialogs/channelList.py:109
 msgid "Channel list search error."
-msgstr ""
+msgstr "Es trat ein Fehler beim Suchen in der Channel-Liste auf."
 
 #: ../tekka/dialogs/channelList.py:110
 #, python-format
@@ -287,6 +295,9 @@ msgid ""
 "<b>Tip:</b> You should not use special characters like '*' or '.' in your "
 "search string if you don't know about regular expressions."
 msgstr ""
+"Es befindet sich ein Syntaxfehler in Ihrem Suchwort. Der Fehler lautet: %s\n"
+"<b>Tipp:</b> Sie sollten keine Spezialzeichen wie „*“ oder „.“ in Ihrem "
+"Suchwort benutzen, wenn Sie nicht wissen was ein regulärer Ausdruck ist."
 
 #: ../tekka/dialogs/channelList.py:210
 msgid "Channel"
@@ -294,20 +305,20 @@ msgstr "Channel"
 
 #: ../tekka/dialogs/dcc.py:167
 msgid "No transfer selected!"
-msgstr ""
+msgstr "Es wurde kein Transfer ausgewählt!"
 
 #: ../tekka/dialogs/dcc.py:168
 msgid "You must select a transfer to remove it."
-msgstr ""
+msgstr "Sie müssen einen Transfer auswählen, um ihn zu entfernen."
 
 #: ../tekka/dialogs/dcc.py:172
 msgid "Remove file transfer?"
-msgstr ""
+msgstr "Wollen Sie diesen Dateitransfer entfernen?"
 
 #: ../tekka/dialogs/dcc.py:173
 #, python-format
 msgid "Are you sure you want to remove the file transfer %(id)d?"
-msgstr ""
+msgstr "Sind Sie sicher, dass Sie den Dateitransfer %(id)d entfernen wollen?"
 
 #: ../tekka/dialogs/dcc.py:232
 msgid "ID"
@@ -345,17 +356,19 @@ msgstr "K_ompilieren und ausführen"
 #: ../tekka/dialogs/plugins.py:120
 #, python-format
 msgid "Configure %(name)s"
-msgstr ""
+msgstr "Konfiguriere %(name)s"
 
 #: ../tekka/dialogs/server.py:211
 msgid "Error while retrieving server name."
-msgstr ""
+msgstr "Es trat ein Fehler auf während der Servername empfangen wurde."
 
 #: ../tekka/dialogs/server.py:212
 msgid ""
 "There was an error while retrieving the server name.\n"
 "Are you connected to maki?"
 msgstr ""
+"Es trat ein Fehler auf während der Servername empfangen wurde.\n"
+"Sind Sie mit maki verbunden?"
 
 #: ../tekka/dialogs/whois.py:74
 #, python-format
@@ -391,11 +404,11 @@ msgstr[1] "%d Operatoren"
 
 #: ../tekka/lib/dcc_dialog.py:67
 msgid "Select destination"
-msgstr ""
+msgstr "Wählen Sie das Ziel"
 
 #: ../tekka/lib/dcc_dialog.py:86
 msgid "Select a destination to save the file"
-msgstr ""
+msgstr "Wählen Sie ein Ziel, um die Datei zu speichern"
 
 #: ../tekka/lib/dcc_dialog.py:104
 msgid ""
@@ -403,6 +416,9 @@ msgid ""
 "<b>Info:</b> If you don't choose another destination, this file will be "
 "resumed."
 msgstr ""
+"\n"
+"<b>Information:</b> Wenn Sie kein anderes Ziel wählen, wird der "
+"Dateitransfer wiederaufgenommen."
 
 #: ../tekka/lib/dcc_dialog.py:110
 msgid "Incoming file transfer"
@@ -416,6 +432,10 @@ msgid ""
 "File size: %(bytes)d bytes\n"
 "Destination: %(destination)s%(resumable)s"
 msgstr ""
+"Sender: „%(nick)s“\n"
+"Dateiname: „%(filename)s“\n"
+"Dateigröße: %(bytes)d Byte\n"
+"Ziel: %(destination)s%(resumable)s"
 
 #: ../tekka/lib/dialog_control.py:62
 #, python-format
@@ -425,7 +445,7 @@ msgstr "Kann Dialog '%s' nicht öffnen. Keine Verbindung zu maki."
 #: ../tekka/lib/general_output_buffer.py:63
 #, python-format
 msgid "Hide '%s' messages"
-msgstr ""
+msgstr "Verstecke „%s“-Nachrichten"
 
 #: ../tekka/lib/key_dialog.py:50
 #, python-format
@@ -515,6 +535,8 @@ msgid ""
 "You are connected to maki. The next step is to connect to a server via the "
 "server dialog in the tekka menu."
 msgstr ""
+"Sie sind mit maki verbunden. Der nächste Schritt besteht darin sich über das "
+"„tekka“-Menü mit einem Server zu verbinden."
 
 #: ../tekka/lib/welcome_window.py:101
 msgid ""
@@ -532,47 +554,47 @@ msgstr ""
 "http://sushi.ikkoku.de/ und schauen Sie, ob eine Lösung für ihr Problem "
 "vorliegt. Falls nicht, zögern Sie nicht den Kundendienst zu kontaktieren."
 
-#: ../tekka/main.py:462
+#: ../tekka/main.py:468
 msgid "Reset markup"
 msgstr "Textauszeichnung zurücksetzen"
 
-#: ../tekka/main.py:612
+#: ../tekka/main.py:618
 #, python-format
 msgid "Do you really want to close channel “%(name)s”?"
 msgstr "Wollen Sie Channel »%(name)s« wirklich schließen?"
 
-#: ../tekka/main.py:614
+#: ../tekka/main.py:620
 #, python-format
 msgid "Do you really want to close query “%(name)s”?"
 msgstr "Wollen sie Query »%(name)s« wirklich schließen?"
 
-#: ../tekka/main.py:616
+#: ../tekka/main.py:622
 #, python-format
 msgid "Do you really want to close server “%(name)s”?"
 msgstr "Wollen Sie Server »%(name)s« wirklich schließen?"
 
 #. TODO: away status
-#: ../tekka/main.py:712
+#: ../tekka/main.py:718
 msgid "Nickname: "
 msgstr "Nickname: "
 
-#: ../tekka/main.py:715
+#: ../tekka/main.py:721
 msgid "User: "
 msgstr "Benutzer: "
 
-#: ../tekka/main.py:716
+#: ../tekka/main.py:722
 msgid "Topic: "
 msgstr "Thema: "
 
-#: ../tekka/main.py:718 ../tekka/main.py:722
+#: ../tekka/main.py:724 ../tekka/main.py:728
 msgid "Last sentence: "
 msgstr "Letzter Satz: "
 
-#: ../tekka/main.py:1177
+#: ../tekka/main.py:1188
 msgid "Error occured"
 msgstr "Es ist ein Fehler aufgetreten"
 
-#: ../tekka/main.py:1186
+#: ../tekka/main.py:1197
 msgid ""
 "<span size='larger' weight='bold'>Error</span>\n"
 "\n"
@@ -591,7 +613,7 @@ msgstr "Keine Verbindung zu maki."
 
 #: ../tekka/menus/mainmenu_context.py:105
 msgid "You can't shutdown maki. You're not connected."
-msgstr ""
+msgstr "Sie können maki nicht herunterfahren. Sie sind nicht verbunden."
 
 #: ../tekka/menus/mainmenu_context.py:236
 msgid "tekka could not determine server."
@@ -607,7 +629,7 @@ msgstr ""
 
 #: ../tekka/menus/nicklist_menu.py:53 ../tekka/menus/servertree_menu.py:52
 msgid "Widget creation failed."
-msgstr ""
+msgstr "Das Widget konnte nicht erstellt werden."
 
 #: ../tekka/menus/nicklist_menu.py:54
 msgid ""
@@ -618,16 +640,16 @@ msgstr ""
 
 #: ../tekka/menus/nicklist_menu.py:153
 msgid "No file selected"
-msgstr ""
+msgstr "Keine Datei ausgewählt"
 
 #: ../tekka/menus/nicklist_menu.py:154
 msgid "You didn't select a file to send. Aborting."
-msgstr ""
+msgstr "Sie haben keine Datei zum Senden ausgewählt. Abbruch."
 
 #: ../tekka/menus/nicklist_menu.py:160
 #, python-format
 msgid "Choose a file to send to %(nick)s"
-msgstr ""
+msgstr "Wählen Sie eine Datei aus, die sie %(nick)s senden möchten"
 
 #: ../tekka/menus/servertree_menu.py:53
 msgid ""
@@ -650,23 +672,9 @@ msgstr ""
 msgid "Advanced Preferences"
 msgstr "Erweiterte Einstellungen"
 
-#: ../glade/dialogs/advancedPreferences.glade.h:2
-#: ../glade/dialogs/channelList.glade.h:2 ../glade/dialogs/hide.glade.h:11
-#: ../glade/dialogs/history.glade.h:3 ../glade/dialogs/plugins.glade.h:5
-msgid "gtk-close"
-msgstr ""
-
 #: ../glade/dialogs/channelList.glade.h:1
 msgid "Channel List"
 msgstr "Channelliste"
-
-#: ../glade/dialogs/channelList.glade.h:3
-msgid "gtk-find"
-msgstr ""
-
-#: ../glade/dialogs/channelList.glade.h:4
-msgid "gtk-stop"
-msgstr ""
 
 #: ../glade/dialogs/dcc.glade.h:1
 msgid "File Transfers"
@@ -674,43 +682,43 @@ msgstr "Dateiübertragungen"
 
 #: ../glade/dialogs/hide.glade.h:1
 msgid "<b>Message types to hide</b>"
-msgstr ""
+msgstr "<b>Zu versteckende Nachrichtentypen</b>"
 
 #: ../glade/dialogs/hide.glade.h:2
 msgid "<b>Other</b>"
-msgstr ""
+msgstr "<b>Andere</b>"
 
 #: ../glade/dialogs/hide.glade.h:3
 msgid "<b>Own</b>"
-msgstr ""
+msgstr "<b>Eigene</b>"
 
 #: ../glade/dialogs/hide.glade.h:4
 msgid "Hide message types"
-msgstr ""
+msgstr "Verstecke Nachrichtentypen"
 
 #: ../glade/dialogs/hide.glade.h:5
 msgid "Join:"
-msgstr ""
+msgstr "Betreten:"
 
 #: ../glade/dialogs/hide.glade.h:6
 msgid "Kick:"
-msgstr ""
+msgstr "Rauswurf:"
 
 #: ../glade/dialogs/hide.glade.h:7
 msgid "Mode:"
-msgstr ""
+msgstr "Modus:"
 
 #: ../glade/dialogs/hide.glade.h:8
 msgid "Nick:"
-msgstr ""
+msgstr "Nickwechsel:"
 
 #: ../glade/dialogs/hide.glade.h:9
 msgid "Part:"
-msgstr ""
+msgstr "Verlassen:"
 
 #: ../glade/dialogs/hide.glade.h:10
 msgid "Quit:"
-msgstr ""
+msgstr "Beenden:"
 
 #: ../glade/dialogs/history.glade.h:1
 msgid "History"
@@ -718,11 +726,11 @@ msgstr "Chronik"
 
 #: ../glade/dialogs/history.glade.h:2
 msgid "Local search only"
-msgstr ""
+msgstr "Nur lokal suchen"
 
 #: ../glade/dialogs/plugins.glade.h:1
 msgid "C_onfigure"
-msgstr ""
+msgstr "K_onfigurieren"
 
 #: ../glade/dialogs/plugins.glade.h:2
 msgid "Plugins"
@@ -738,7 +746,7 @@ msgstr "_Entladen"
 
 #: ../glade/dialogs/preferences.glade.h:1
 msgid "<b>Filter messages</b>"
-msgstr ""
+msgstr "<b>Nachrichten filtern</b>"
 
 #: ../glade/dialogs/preferences.glade.h:2
 msgid ""
@@ -750,6 +758,12 @@ msgid ""
 "\n"
 "The last field is optional."
 msgstr ""
+"<b>Hilfe:</b>\n"
+"Das <b>erste</b> Feld ist der <u>Nachrichtentyp</u>.\n"
+"Das <b>zweite</b> Feld ist der <u>Ursprungsserver</u>.\n"
+"Das <b>letzte</b> Feld ist der <u>Ursprungschannel/-query</u>.\n"
+"\n"
+"Das letzte Feld ist optional."
 
 #: ../glade/dialogs/preferences.glade.h:8
 msgid ""
@@ -853,7 +867,7 @@ msgstr "_maki mit tekka beenden"
 
 #: ../glade/dialogs/preferences.glade.h:34
 msgid "Time format:"
-msgstr ""
+msgstr "Zeitformat:"
 
 #: ../glade/dialogs/preferences.glade.h:35
 msgid "Use _RGBA"
@@ -865,7 +879,7 @@ msgstr "_Standardschrift benutzen"
 
 #: ../glade/dialogs/preferences.glade.h:37
 msgid "Use contrast sensitive colors"
-msgstr ""
+msgstr "Kontrast-sensitive Farben benutzen"
 
 #: ../glade/dialogs/preferences.glade.h:38 ../glade/mainwindow.glade.h:13
 msgid "_General Output"
@@ -931,14 +945,6 @@ msgstr "Realer Name:"
 msgid "Server name:"
 msgstr "Servername:"
 
-#: ../glade/dialogs/serverAdd.glade.h:11
-msgid "gtk-add"
-msgstr ""
-
-#: ../glade/dialogs/serverAdd.glade.h:12
-msgid "gtk-cancel"
-msgstr ""
-
 #: ../glade/dialogs/serverDelete.glade.h:2
 #, no-c-format
 msgid ""
@@ -953,14 +959,6 @@ msgstr ""
 msgid "Delete Server"
 msgstr "Server löschen"
 
-#: ../glade/dialogs/serverDelete.glade.h:6
-msgid "gtk-no"
-msgstr ""
-
-#: ../glade/dialogs/serverDelete.glade.h:7
-msgid "gtk-yes"
-msgstr ""
-
 #: ../glade/dialogs/serverEdit.glade.h:2
 msgid "<b>Edit Server</b>"
 msgstr "<b>Server bearbeiten</b>"
@@ -971,7 +969,7 @@ msgstr "Server bearbeiten"
 
 #: ../glade/dialogs/serverEdit.glade.h:7
 msgid "NickServ Ghost:"
-msgstr ""
+msgstr "NickServ-Ghost:"
 
 #: ../glade/mainwindow.glade.h:1
 msgid "Connect"
@@ -987,7 +985,7 @@ msgstr "IRC-Farben"
 
 #: ../glade/mainwindow.glade.h:4
 msgid "S_ide Pane"
-msgstr ""
+msgstr "Se_itenleiste"
 
 #: ../glade/mainwindow.glade.h:6
 msgid "Shutdown"
@@ -1036,67 +1034,3 @@ msgstr "_Ansicht"
 #: ../glade/mainwindow.glade.h:18
 msgid "_maki"
 msgstr "_maki"
-
-#~ msgid "Close"
-#~ msgstr "Schließen"
-
-#~ msgid "Join"
-#~ msgstr "Betreten"
-
-#~ msgid "Part"
-#~ msgstr "Verlassen"
-
-#~ msgid "Ban"
-#~ msgstr "Bannen"
-
-#~ msgid "Kick"
-#~ msgstr "Kicken"
-
-#~ msgid "Modes"
-#~ msgstr "Modi"
-
-#~ msgid "Whois"
-#~ msgstr "Whois"
-
-#~ msgid "Give Op"
-#~ msgstr "Op geben"
-
-#~ msgid "Give Voice"
-#~ msgstr "Voice geben"
-
-#~ msgid "Give Half-Op"
-#~ msgstr "Half-Op geben"
-
-#~ msgid "Auto-join"
-#~ msgstr "Automatisch betreten"
-
-#~ msgid "Auto-connect"
-#~ msgstr "Automatisch verbinden"
-
-#~ msgid "Take Half-Op"
-#~ msgstr "Half-Op nehmen"
-
-#~ msgid "Take Voice"
-#~ msgstr "Voice nehmen"
-
-#~ msgid "Take Op"
-#~ msgstr "Op nehmen"
-
-#~ msgid "Set Key"
-#~ msgstr "Schlüssel setzen"
-
-#~ msgid ""
-#~ "<b>Notice:</b>\n"
-#~ "First field is type, second field is server, third is the channel.\n"
-#~ "Everything matching passes the filter and will be shown except the row is "
-#~ "negated."
-#~ msgstr ""
-#~ "<b>Notiz:</b>\n"
-#~ "Das erste Feld stellt den Typ dar, das zweite den Server und das Dritte den "
-#~ "Kanal.\n"
-#~ "Alle passenden Zeilen passieren den Filter und werden somit angezeigt solang "
-#~ "die Zeile nicht negiert ist."
-
-#, python-format
-#~ msgid "Error: %(message)s"
-#~ msgstr "Fehler: %(message)s"
